fix: colorPicker is now working and show the colors in the App.tsx

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,4 +1,8 @@
 {
+  "compilerOptions": {
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext"
+  },
   "files": [],
   "references": [
     { "path": "./tsconfig.app.json" },
